--- a/server/java-version/repo-impl/pom.xml
+++ b/server/java-version/repo-impl/pom.xml
@@ -14,6 +14,12 @@
             <artifactId>score-app</artifactId>
             <version>0.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.8.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <properties>
