--- a/server/java-version/repo-impl/pom.xml
+++ b/server/java-version/repo-impl/pom.xml
@@ -20,6 +20,11 @@
             <version>5.8.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>5.0.0</version>
+        </dependency>
     </dependencies>
 
     <properties>
