--- a/server/java-version/repo-impl/pom.xml
+++ b/server/java-version/repo-impl/pom.xml
@@ -25,6 +25,12 @@
             <artifactId>HikariCP</artifactId>
             <version>5.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.0.206</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <properties>
