ADD : javalin server required dependencies

--- a/server/java-version/server-impl/pom.xml
+++ b/server/java-version/server-impl/pom.xml
@@ -24,6 +24,16 @@
             <artifactId>score-app-service-impl</artifactId>
             <version>0.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>io.javalin</groupId>
+            <artifactId>javalin</artifactId>
+            <version>4.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.1</version>
+        </dependency>
     </dependencies>
 
     <properties>
