--- a/server/java-version/server-impl/pom.xml
+++ b/server/java-version/server-impl/pom.xml
@@ -34,6 +34,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.13.1</version>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.10</version>
+        </dependency>
     </dependencies>
 
     <properties>
