--- a/client/client-app/pom.xml
+++ b/client/client-app/pom.xml
@@ -24,6 +24,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.13.1</version>
         </dependency>
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.5.0</version>
+        </dependency>
     </dependencies>
 
     <properties>
