--- a/client/client-app/pom.xml
+++ b/client/client-app/pom.xml
@@ -34,6 +34,11 @@
             <artifactId>j-text-utils</artifactId>
             <version>0.3.4</version>
         </dependency>
+        <dependency>
+            <groupId>io.dropwizard.metrics</groupId>
+            <artifactId>metrics-core</artifactId>
+            <version>4.2.7</version>
+        </dependency>
     </dependencies>
 
     <properties>
