--- a/server/java-version/server-impl/pom.xml
+++ b/server/java-version/server-impl/pom.xml
@@ -44,6 +44,11 @@
             <artifactId>logback-classic</artifactId>
             <version>1.2.10</version>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.0.206</version>
+        </dependency>
     </dependencies>
 
     <build>
